test/fails/bad_generics/infer13.lgl
`v multiop<`t, `u, `v>(`t x, `u y, `v z) {
    return x * y * z
}

void main() {
    print multiop(1., [[1., 2.], [2., 1.], [1., 1.]], [1., 2.]);  // Bad return type
}